# RexCore

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  main.cpp  vcpkg.json
src/: Log.cpp  Log.hpp  main.cpp
src/cmake_test/: CMakeLists.txt  main.cpp
